# what_are_ai_agents

./: .gitignore  Makefile  README.md  pyproject.toml
data/: sample_book_dataset.csv
notebooks/: 01_academic_interest_in_llms.ipynb
src/: 01_document_qa.py  02_chatbot.py
