[tool.poetry]
name = "using-llms-in-business-oreilly"
version = "0.1.0"
description = "This is the official repository of code I use for LLMs in Business and Enterprise Applications published by O'Reilly."
authors = ["Ben Labaschin <benjaminlabaschin@gmail.com>"]
readme = "README.md"
packages = [{include = "using_llms_in_business_oreilly"}]

[tool.poetry.dependencies]
python = "3.11.1"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
kaggle = "^1.5.13"
python-dotenv = "^1.0.0"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
transformers = {extras = ["agents"], version = "^4.29.2"}
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
