[tool.poetry]
name = "using-llms-in-business-oreilly"
version = "0.1.0"
description = "This is the official repository of code I use for LLMs in Business and Enterprise Applications published by O'Reilly."
authors = ["Ben Labaschin <benjaminlabaschin@gmail.com>"]
readme = "README.md"
packages = [{include = "using_llms_in_business_oreilly"}]

[tool.poetry.dependencies]
python = "3.11.1"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
kaggle = "^1.5.13"
python-dotenv = "^1.0.0"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
transformers = {extras = ["agents"], version = "^4.29.2"}
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
diffusers = {extras = ["torch"], version = "^0.17.1"}
accelerate = "^0.20.3"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
